--- a/ripple.config
+++ b/ripple.config
@@ -8,12 +8,13 @@
   <Floats>
     <string>Bottles</string>
     <string>FubuCore</string>
-    <string>FubuKayak</string>    
+    <string>FubuKayak</string>
     <string>FubuLocalization</string>
     <string>FubuMVC.References</string>
     <string>FubuMVC.Spark</string>
     <string>FubuTestingSupport</string>
-    <string>HtmlTags</string>    
+    <string>HtmlTags</string>
     <string>Serenity</string>
+    <string>Spark</string>
   </Floats>
 </ripple>
