--- a/src/FubuMVC.Validation/FubuMVC.Validation.csproj
+++ b/src/FubuMVC.Validation/FubuMVC.Validation.csproj
@@ -34,22 +34,22 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Bottles">
-      <HintPath>..\packages\Bottles.0.9.1.343\lib\Bottles.dll</HintPath>
+      <HintPath>..\packages\Bottles.0.9.1.345\lib\Bottles.dll</HintPath>
     </Reference>
     <Reference Include="FubuCore">
-      <HintPath>..\packages\FubuCore.0.9.9.177\lib\FubuCore.dll</HintPath>
+      <HintPath>..\packages\FubuCore.0.9.9.178\lib\FubuCore.dll</HintPath>
     </Reference>
     <Reference Include="FubuLocalization">
-      <HintPath>..\packages\FubuLocalization.0.9.5.75\lib\FubuLocalization.dll</HintPath>
+      <HintPath>..\packages\FubuLocalization.0.9.5.76\lib\FubuLocalization.dll</HintPath>
     </Reference>
     <Reference Include="FubuMVC.Core">
-      <HintPath>..\packages\FubuMVC.References.0.9.8.1122\lib\net40\FubuMVC.Core.dll</HintPath>
+      <HintPath>..\packages\FubuMVC.References.0.9.8.1127\lib\net40\FubuMVC.Core.dll</HintPath>
     </Reference>
     <Reference Include="FubuMVC.StructureMap">
-      <HintPath>..\packages\FubuMVC.References.0.9.8.1122\lib\net40\FubuMVC.StructureMap.dll</HintPath>
+      <HintPath>..\packages\FubuMVC.References.0.9.8.1127\lib\net40\FubuMVC.StructureMap.dll</HintPath>
     </Reference>
     <Reference Include="HtmlTags">
-      <HintPath>..\packages\HtmlTags.1.1.0.101\lib\4.0\HtmlTags.dll</HintPath>
+      <HintPath>..\packages\HtmlTags.1.1.0.102\lib\4.0\HtmlTags.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="StructureMap">
@@ -116,7 +116,8 @@
     <None Include=".package-manifest" />
     <Content Include="content\scripts\fubuvalidation.js" />
     <Content Include="content\scripts\lib\amplify.core.min.js" />
-    <Content Include="content\scripts\lib\jquery-1.6.2.js" />
+    <Content Include="content\scripts\lib\jquery-1.7.min.js" />
+    <Content Include="content\scripts\lib\jquery.continuations.forms.js" />
     <Content Include="content\scripts\lib\jquery.continuations.js" />
     <Content Include="content\scripts\lib\jquery.form.js" />
     <Content Include="content\scripts\lib\json2.js" />
