--- a/src/FubuMVC.Validation/validation.script.config
+++ b/src/FubuMVC.Validation/validation.script.config
@@ -1,4 +1,4 @@
-jquery is lib/jquery-1.6.2.js
+jquery is lib/jquery-1.7.min.js
 
 ordered set core is 
 jquery
@@ -7,6 +7,7 @@ lib/json2.js
 lib/underscore-min.js
 lib/jquery.form.js
 lib/jquery.continuations.js
+lib/jquery.continuations.forms.js
 lib/sinon-1.2.0.js
 
 fubuvalidation.js requires core
