--- a/ripple.config
+++ b/ripple.config
@@ -16,5 +16,6 @@
     <string>HtmlTags</string>
     <string>Serenity</string>
     <string>Spark</string>
+    <string>FubuMVC.TestingHarness</string>
   </Floats>
 </ripple>
