--- a/src/FubuMVC.Validation.Tests/packages.config
+++ b/src/FubuMVC.Validation.Tests/packages.config
@@ -3,15 +3,20 @@
   <package id="Bottles" version="0.9.1.345" />
   <package id="DotNetZip" version="1.9.1.8" />
   <package id="FubuCore" version="0.9.9.178" />
-  <package id="FubuKayak" version="0.9.8.1127" />
+  <package id="FubuKayak" version="0.9.8.1128" />
   <package id="FubuLocalization" version="0.9.5.76" />
-  <package id="FubuMVC.References" version="0.9.8.1127" />
+  <package id="FubuMVC.References" version="0.9.8.1128" />
+  <package id="FubuMVC.TestingHarness" version="0.9.8.1128" />
   <package id="FubuTestingSupport" version="0.9.9.178" />
+  <package id="Gate" version="0.1.4" targetFramework="net40" />
+  <package id="Gate.Kayak" version="0.1.4" targetFramework="net40" />
   <package id="HtmlTags" version="1.1.0.102" />
+  <package id="Kayak" version="0.7.2" targetFramework="net40" />
   <package id="NUnit" version="2.5.10.11092" />
-  <package id="RhinoMocks" version="3.6" />
+  <package id="Owin.Startup" version="0.4" targetFramework="net40" />
+  <package id="RhinoMocks" version="3.6" targetFramework="net40" />
   <package id="Serenity" version="0.9.8.46" />
-  <package id="StoryTeller" version="1.1.0.488" />
-  <package id="structuremap" version="2.6.3" />
-  <package id="structuremap.automocking" version="2.6.3" />
+  <package id="Storyteller" version="1.1.0.510" />
+  <package id="structuremap" version="2.6.3" targetFramework="net40" />
+  <package id="structuremap.automocking" version="2.6.3" targetFramework="net40" />
 </packages>
