--- a/src/FubuMVC.Validation.StoryTeller/packages.config
+++ b/src/FubuMVC.Validation.StoryTeller/packages.config
@@ -1,15 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Bottles" version="0.9.1.345" targetFramework="net40" />
+  <package id="Bottles" version="0.9.1.349" />
   <package id="Castle.Core" version="3.0.0.4001" targetFramework="net40" />
   <package id="DotNetZip" version="1.9.1.8" targetFramework="net40" />
-  <package id="FubuCore" version="0.9.9.178" targetFramework="net40" />
-  <package id="FubuKayak" version="0.9.8.1128" targetFramework="net40" />
-  <package id="FubuLocalization" version="0.9.5.76" targetFramework="net40" />
-  <package id="FubuMVC.References" version="0.9.8.1128" targetFramework="net40" />
+  <package id="FubuCore" version="0.9.9.179" />
+  <package id="FubuKayak" version="0.9.8.1142" />
+  <package id="FubuLocalization" version="0.9.5.77" />
+  <package id="FubuMVC.References" version="0.9.8.1142" />
   <package id="Gate" version="0.1.4" targetFramework="net40" />
   <package id="Gate.Kayak" version="0.1.4" targetFramework="net40" />
-  <package id="HtmlTags" version="1.1.0.102" targetFramework="net40" />
+  <package id="HtmlTags" version="1.1.0.103" />
   <package id="Kayak" version="0.7.2" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="4.5.1" targetFramework="net40" />
   <package id="Owin.Startup" version="0.4" targetFramework="net40" />
@@ -17,7 +17,7 @@
   <package id="Selenium.Support" version="2.25.1" />
   <package id="Selenium.WebDriver" version="2.25.1" />
   <package id="Selenium.WebDriverBackedSelenium" version="2.25.1" />
-  <package id="Serenity" version="0.9.8.46" targetFramework="net40" />
+  <package id="Serenity" version="0.9.8.47" />
   <package id="Storyteller" version="1.1.0.510" targetFramework="net40" />
   <package id="structuremap" version="2.6.3" targetFramework="net40" />
 </packages>
