converted to the new nuget scheme

--- a/ripple.config
+++ b/ripple.config
@@ -17,5 +17,7 @@
     <string>Serenity</string>
     <string>Spark</string>
     <string>FubuMVC.TestingHarness</string>
+    <string>FubuMVC.Core</string>
+    <string>FubuMVC.Core.UI</string>
   </Floats>
 </ripple>
