--- a/src/FubuMVC.Validation/packages.config
+++ b/src/FubuMVC.Validation/packages.config
@@ -1,9 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Bottles" version="0.9.1.349" />
-  <package id="FubuCore" version="0.9.9.179" />
-  <package id="FubuLocalization" version="0.9.5.77" />
-  <package id="FubuMVC.References" version="0.9.8.1142" />
-  <package id="HtmlTags" version="1.1.0.103" />
+  <package id="Bottles" version="0.9.1.376" />
+  <package id="FubuCore" version="0.9.9.192" />
+  <package id="FubuLocalization" version="0.9.5.85" />
+  <package id="FubuMVC.Core" version="0.9.8.1220" />
+  <package id="FubuMVC.Core.UI" version="0.9.9.18" />
+  <package id="FubuMVC.Core.View" version="0.9.9.13" targetFramework="net40" />
+  <package id="FubuMVC.StructureMap" version="0.9.8.1214" targetFramework="net40" />
+  <package id="HtmlTags" version="1.2.0.121" />
   <package id="structuremap" version="2.6.3" />
 </packages>
