--- a/packaging/nuget/fubumvc.validation.nuspec
+++ b/packaging/nuget/fubumvc.validation.nuspec
@@ -12,7 +12,8 @@
     <description>A FubuMVC implementation of FubuValidation</description>
     <tags>fubumvc mvc fubu validation conventional</tags>
     <dependencies>
-      <dependency id="FubuMVC.References" version="0.9.8.1142" />
+      <dependency id="FubuMVC.Core" version="0.9.8.1220" />
+      <dependency id="FubuMVC.Core.UI" version="0.9.9.18" />
       <dependency id="FubuValidation" />
       <dependency id="FubuCore" version="0.9.9.151" />
     </dependencies>
