--- a/src/FubuMVC.Validation.Tests/packages.config
+++ b/src/FubuMVC.Validation.Tests/packages.config
@@ -1,15 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Bottles" version="0.9.1.376" />
+  <package id="Bottles" version="0.9.1.377" />
   <package id="DotNetZip" version="1.9.1.8" />
-  <package id="FubuCore" version="0.9.9.192" />
-  <package id="FubuLocalization" version="0.9.5.85" />
-  <package id="FubuMVC.Core" version="0.9.8.1220" />
-  <package id="FubuMVC.SelfHost" version="0.9.8.1219" targetFramework="net40" />
+  <package id="FubuCore" version="0.9.9.193" />
+  <package id="FubuLocalization" version="0.9.5.86" />
+  <package id="FubuMVC.Core" version="0.9.8.1223" />
+  <package id="FubuMVC.SelfHost" version="0.9.8.1223" />
   <package id="FubuMVC.StructureMap" version="0.9.8.1214" targetFramework="net40" />
-  <package id="FubuMVC.TestingHarness" version="0.9.8.1220" />
-  <package id="FubuTestingSupport" version="0.9.9.192" />
-  <package id="HtmlTags" version="1.2.0.121" />
+  <package id="FubuMVC.TestingHarness" version="0.9.8.1223" />
+  <package id="FubuTestingSupport" version="0.9.9.193" />
+  <package id="HtmlTags" version="1.2.0.122" />
   <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebApi.SelfHost" version="4.0.20710.0" targetFramework="net40" />
@@ -17,7 +17,7 @@
   <package id="Newtonsoft.Json" version="4.5.9" targetFramework="net40" />
   <package id="NUnit" version="2.5.10.11092" />
   <package id="RhinoMocks" version="3.6" targetFramework="net40" />
-  <package id="Serenity" version="0.9.8.64" />
+  <package id="Serenity" version="0.9.8.66" />
   <package id="Storyteller" version="1.1.0.510" />
   <package id="structuremap" version="2.6.3" />
   <package id="structuremap.automocking" version="2.6.3" targetFramework="net40" />
