fixing nuget ref's and rev'ing buildsupport

--- a/ripple.config
+++ b/ripple.config
@@ -19,5 +19,9 @@
     <string>FubuMVC.TestingHarness</string>
     <string>FubuMVC.Core</string>
     <string>FubuMVC.Core.UI</string>
+    <string>FubuMVC.Core.View</string>
+    <string>FubuMVC.SelfHost</string>
+    <string>FubuMVC.StructureMap</string>
+    <string>Storyteller</string>
   </Floats>
 </ripple>
