--- a/src/FubuValidation/packages.config
+++ b/src/FubuValidation/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FubuCore" version="0.9.9.193" />
-  <package id="FubuLocalization" version="0.9.5.86" />
-  <package id="HtmlTags" version="1.2.0.122" />
+  <package id="FubuCore" version="0.9.9.204" targetFramework="net40" />
+  <package id="FubuLocalization" version="0.9.5.97" targetFramework="net40" />
+  <package id="HtmlTags" version="1.2.0.126" targetFramework="net40" />
 </packages>
