--- a/src/FubuMVC.Validation.StoryTeller/packages.config
+++ b/src/FubuMVC.Validation.StoryTeller/packages.config
@@ -1,19 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Bottles" version="0.9.1.377" />
+  <package id="Bottles" version="0.9.5.389" targetFramework="net40" />
   <package id="Castle.Core" version="3.0.0.4001" targetFramework="net40" />
   <package id="DotNetZip" version="1.9.1.8" targetFramework="net40" />
-  <package id="FubuCore" version="0.9.9.193" />
-  <package id="FubuLocalization" version="0.9.5.86" />
-  <package id="FubuMVC.Core" version="0.9.8.1223" />
-  <package id="FubuMVC.StructureMap" version="0.9.8.1214" targetFramework="net40" />
-  <package id="HtmlTags" version="1.2.0.122" />
+  <package id="FubuCore" version="0.9.9.204" targetFramework="net40" />
+  <package id="FubuLocalization" version="0.9.5.97" targetFramework="net40" />
+  <package id="FubuMVC.Core" version="0.9.8.1252" targetFramework="net40" />
+  <package id="FubuMVC.StructureMap" version="0.9.8.1252" targetFramework="net40" />
+  <package id="HtmlTags" version="1.2.0.126" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="4.5.9" targetFramework="net40" />
   <package id="Selenium.RC" version="2.25.1" />
   <package id="Selenium.Support" version="2.25.1" />
   <package id="Selenium.WebDriver" version="2.25.1" />
   <package id="Selenium.WebDriverBackedSelenium" version="2.25.1" />
-  <package id="Serenity" version="0.9.8.66" />
-  <package id="Storyteller" version="1.1.0.510" targetFramework="net40" />
+  <package id="Serenity" version="0.9.8.80" targetFramework="net40" />
   <package id="structuremap" version="2.6.3" />
 </packages>
