--- a/src/FubuMVC.Validation/packages.config
+++ b/src/FubuMVC.Validation/packages.config
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Bottles" version="0.9.1.377" />
-  <package id="FubuCore" version="0.9.9.193" />
-  <package id="FubuLocalization" version="0.9.5.86" />
-  <package id="FubuMVC.Core" version="0.9.8.1223" />
-  <package id="FubuMVC.Core.UI" version="0.9.9.20" />
-  <package id="FubuMVC.Core.View" version="0.9.9.13" targetFramework="net40" />
-  <package id="FubuMVC.StructureMap" version="0.9.8.1214" targetFramework="net40" />
-  <package id="HtmlTags" version="1.2.0.122" />
+  <package id="Bottles" version="0.9.5.389" targetFramework="net40" />
+  <package id="FubuCore" version="0.9.9.204" targetFramework="net40" />
+  <package id="FubuLocalization" version="0.9.5.97" targetFramework="net40" />
+  <package id="FubuMVC.Core" version="0.9.8.1252" targetFramework="net40" />
+  <package id="FubuMVC.Core.UI" version="0.9.9.34" targetFramework="net40" />
+  <package id="FubuMVC.Core.View" version="0.9.9.28" targetFramework="net40" />
+  <package id="FubuMVC.StructureMap" version="0.9.8.1252" targetFramework="net40" />
+  <package id="HtmlTags" version="1.2.0.126" targetFramework="net40" />
   <package id="structuremap" version="2.6.3" />
 </packages>
