--- a/src/FubuMVC.HelloValidation/packages.config
+++ b/src/FubuMVC.HelloValidation/packages.config
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Bottles" version="0.9.9.401" targetFramework="net40" />
-  <package id="FubuCore" version="0.9.9.206" targetFramework="net40" />
-  <package id="FubuLocalization" version="0.9.5.105" targetFramework="net40" />
-  <package id="FubuMVC.Core" version="0.9.9.1274" targetFramework="net40" />
-  <package id="FubuMVC.Spark" version="0.9.9.43" targetFramework="net40" />
-  <package id="FubuMVC.StructureMap" version="0.9.9.1274" targetFramework="net40" />
-  <package id="HtmlTags" version="1.2.0.128" targetFramework="net40" />
-  <package id="Spark" version="1.7.4.0" />
+  <package id="Bottles" version="1.0.0.416" targetFramework="net40" />
+  <package id="FubuCore" version="1.0.0.212" targetFramework="net40" />
+  <package id="FubuLocalization" version="0.9.5.110" targetFramework="net40" />
+  <package id="FubuMVC.Core" version="0.9.9.1306" targetFramework="net40" />
+  <package id="FubuMVC.Spark" version="0.9.9.67" targetFramework="net40" />
+  <package id="FubuMVC.StructureMap" version="0.9.9.1306" targetFramework="net40" />
+  <package id="HtmlTags" version="1.2.0.133" targetFramework="net40" />
+  <package id="Spark" version="1.7.5.0" targetFramework="net40" />
   <package id="structuremap" version="2.6.3" />
 </packages>
