--- a/src/FubuMVC.Validation.IntegrationTesting/FubuMVC.Validation.IntegrationTesting.csproj
+++ b/src/FubuMVC.Validation.IntegrationTesting/FubuMVC.Validation.IntegrationTesting.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{1207D3CC-1F4B-40AC-8926-E0669DED7A4B}</ProjectGuid>
+    <ProjectGuid>{9E06EFB8-66B9-4D0E-ADE4-0276AD8ED3A2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FubuMVC.Validation.Tests</RootNamespace>
-    <AssemblyName>FubuMVC.Validation.Tests</AssemblyName>
+    <RootNamespace>FubuMVC.Validation.IntegrationTesting</RootNamespace>
+    <AssemblyName>FubuMVC.Validation.IntegrationTesting</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -55,15 +55,11 @@
     <Reference Include="FubuTestingSupport">
       <HintPath>..\packages\FubuTestingSupport.1.0.0.216\lib\FubuTestingSupport.dll</HintPath>
     </Reference>
-    <Reference Include="Gate, Version=0.16.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Gate.0.1.4\lib\Gate.dll</HintPath>
-    </Reference>
     <Reference Include="HtmlTags">
-      <HintPath>..\packages\HtmlTags.1.2.0.136\lib\4.0\HtmlTags.dll</HintPath>
+      <HintPath>..\packages\HtmlTags.1.1.0.119\lib\4.0\HtmlTags.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.4.5.9\lib\net40\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\packages\Newtonsoft.Json.4.5.11\lib\net40\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="nunit.framework">
       <HintPath>..\packages\NUnit.2.5.10.11092\lib\nunit.framework.dll</HintPath>
@@ -71,24 +67,16 @@
     <Reference Include="nunit.mocks">
       <HintPath>..\packages\NUnit.2.5.10.11092\lib\nunit.mocks.dll</HintPath>
     </Reference>
-    <Reference Include="Owin.Startup">
-      <HintPath>..\packages\Owin.Startup.0.4\lib\net40\Owin.Startup.dll</HintPath>
-    </Reference>
     <Reference Include="pnunit.framework">
       <HintPath>..\packages\NUnit.2.5.10.11092\lib\pnunit.framework.dll</HintPath>
     </Reference>
-    <Reference Include="Rhino.Mocks, Version=3.6.0.0, Culture=neutral, PublicKeyToken=0b3305902db7183f, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\RhinoMocks.3.6\lib\Rhino.Mocks.dll</HintPath>
-    </Reference>
-    <Reference Include="Serenity">
-      <HintPath>..\packages\Serenity.0.9.8.102\lib\net40\Serenity.dll</HintPath>
+    <Reference Include="Rhino.Mocks">
+      <HintPath>..\packages\RhinoMocks.3.6.1\lib\net\Rhino.Mocks.dll</HintPath>
     </Reference>
     <Reference Include="StructureMap">
       <HintPath>..\packages\structuremap.2.6.3\lib\StructureMap.dll</HintPath>
     </Reference>
-    <Reference Include="StructureMap.AutoMocking, Version=2.6.4.0, Culture=neutral, PublicKeyToken=e60ad81abae3c223, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="StructureMap.AutoMocking">
       <HintPath>..\packages\structuremap.automocking.2.6.3\lib\StructureMap.AutoMocking.dll</HintPath>
     </Reference>
     <Reference Include="System" />
@@ -106,7 +94,7 @@
       <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.4.0.20710.0\lib\net40\System.Web.Http.dll</HintPath>
     </Reference>
     <Reference Include="System.Web.Http.SelfHost">
-      <HintPath>..\packages\Microsoft.AspNet.WebApi.SelfHost.4.0.20710.0\lib\net40\System.Web.Http.SelfHost.dll</HintPath>
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.SelfHost.4.0.20918.0\lib\net40\System.Web.Http.SelfHost.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -115,16 +103,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AjaxContinuationResolverTester.cs" />
-    <Compile Include="AjaxValidationActionFilterTester.cs" />
-    <Compile Include="FubuValidationEngineTester.cs" />
-    <Compile Include="ModelBindingErrorsTester.cs" />
+    <Compile Include="Ajax\IntegratedAjaxEndpoint.cs" />
+    <Compile Include="Ajax\IntegratedAjaxTester.cs" />
+    <Compile Include="LoFi\IntegratedLoFiEndpoint.cs" />
+    <Compile Include="LoFi\IntegratedLoFiTester.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SampleInputModel.cs" />
-    <Compile Include="SmokeTests.cs" />
-    <Compile Include="AjaxValidationTester.cs" />
-    <Compile Include="ValidationActionFilterTester.cs" />
-    <Compile Include="ValidationFilterTester.cs" />
+    <Compile Include="ValidationHarness.cs" />
+    <Compile Include="ValidationTestFubuRegistry.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FubuMVC.Validation\FubuMVC.Validation.csproj">
@@ -140,11 +130,7 @@
       <Name>FubuValidation</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config">
-      <SubType>Designer</SubType>
-    </None>
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
