--- a/src/FubuMVC.HelloValidation/FubuMVC.HelloValidation.csproj
+++ b/src/FubuMVC.HelloValidation/FubuMVC.HelloValidation.csproj
@@ -33,6 +33,42 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Bottles, Version=0.9.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Bottles.1.0.0.425\lib\Bottles.dll</HintPath>
+    </Reference>
+    <Reference Include="FubuCore, Version=0.9.9.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\FubuCore.1.0.0.216\lib\FubuCore.dll</HintPath>
+    </Reference>
+    <Reference Include="FubuLocalization, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\FubuLocalization.0.9.5.113\lib\FubuLocalization.dll</HintPath>
+    </Reference>
+    <Reference Include="FubuMVC.Core, Version=0.9.8.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\FubuMVC.Core.0.9.9.1323\lib\net40\FubuMVC.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="FubuMVC.Core.Assets">
+      <HintPath>..\packages\FubuMVC.Core.Assets.0.9.9.73\lib\net40\FubuMVC.Core.Assets.dll</HintPath>
+    </Reference>
+    <Reference Include="FubuMVC.Core.UI">
+      <HintPath>..\packages\FubuMVC.Core.UI.0.9.9.85\lib\net40\FubuMVC.Core.UI.dll</HintPath>
+    </Reference>
+    <Reference Include="FubuMVC.Core.View">
+      <HintPath>..\packages\FubuMVC.Core.View.0.9.9.76\lib\net40\FubuMVC.Core.View.dll</HintPath>
+    </Reference>
+    <Reference Include="FubuMVC.Spark">
+      <HintPath>..\packages\FubuMVC.Spark.0.9.9.76\lib\net40\FubuMVC.Spark.dll</HintPath>
+    </Reference>
+    <Reference Include="FubuMVC.StructureMap, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\FubuMVC.StructureMap.0.9.9.1323\lib\net40\FubuMVC.StructureMap.dll</HintPath>
+    </Reference>
+    <Reference Include="HtmlTags, Version=1.2.0.122, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\HtmlTags.1.2.0.136\lib\4.0\HtmlTags.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Spark">
       <HintPath>..\packages\Spark.1.7.5.0\lib\NET40\Spark.dll</HintPath>
@@ -66,7 +102,9 @@
     <Content Include="content\scripts\underscore-min.js" />
     <Content Include="Global.asax" />
     <Content Include="Shared\bindings.xml" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -78,23 +116,16 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="HandlerModelDescriptor.cs" />
-    <Compile Include="Handlers\Ajax\GetHandler.cs" />
-    <Compile Include="Handlers\HandlersMarker.cs" />
-    <Compile Include="Handlers\Products\Create\CreateProductInputModel.cs" />
-    <Compile Include="Handlers\Products\Create\CreateProductRequestModel.cs" />
-    <Compile Include="Handlers\Products\Create\CreateProductViewModel.cs" />
-    <Compile Include="Handlers\Products\Create\GetHandler.cs" />
-    <Compile Include="Handlers\Products\Create\PostHandler.cs" />
-    <Compile Include="Handlers\Products\GetHandler.cs" />
-    <Compile Include="Handlers\Products\IProductsRepository.cs" />
-    <Compile Include="Handlers\Products\Product.cs" />
-    <Compile Include="Handlers\Products\ProductsListRequestModel.cs" />
-    <Compile Include="Handlers\Products\ProductsRepository.cs" />
-    <Compile Include="Handlers\Testing\GetHandler.cs" />
-    <Compile Include="Handlers\Testing\PostHandler.cs" />
-    <Compile Include="Handlers\Testing\TestItem.cs" />
+    <Compile Include="Ajax\AjaxEndpoint.cs" />
+    <Compile Include="Ajax\TestItem.cs" />
     <Compile Include="HelloValidationFubuRegistry.cs" />
+    <Compile Include="Products\Create\CreateProductInputModel.cs" />
+    <Compile Include="Products\Create\CreateProductEndpoint.cs" />
+    <Compile Include="Products\ProductListingEndpoint.cs" />
+    <Compile Include="Products\IProductsRepository.cs" />
+    <Compile Include="Products\Product.cs" />
+    <Compile Include="Products\ProductsListRequestModel.cs" />
+    <Compile Include="Products\ProductsRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TagExtensions.cs" />
   </ItemGroup>
@@ -104,11 +135,11 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Handlers\Products\Create\Create.spark" />
-    <None Include="Handlers\Products\List.spark">
+    <None Include="Ajax\Create.spark" />
+    <None Include="Products\Create\Create.spark" />
+    <None Include="Products\List.spark">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Handlers\Testing\Create.spark" />
     <None Include="Shared\Application.spark" />
     <None Include="Shared\_global.spark" />
     <None Include="Shared\Notification.spark" />
