--- a/src/FubuMVC.HelloValidation/packages.config
+++ b/src/FubuMVC.HelloValidation/packages.config
@@ -1,12 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Bottles" version="1.0.0.425" targetFramework="net40" />
-  <package id="FubuCore" version="1.0.0.216" targetFramework="net40" />
-  <package id="FubuLocalization" version="0.9.5.113" targetFramework="net40" />
-  <package id="FubuMVC.Core" version="0.9.9.1323" targetFramework="net40" />
-  <package id="FubuMVC.Spark" version="0.9.9.76" targetFramework="net40" />
-  <package id="FubuMVC.StructureMap" version="0.9.9.1323" targetFramework="net40" />
-  <package id="HtmlTags" version="1.2.0.136" targetFramework="net40" />
-  <package id="Spark" version="1.7.5.0" targetFramework="net40" />
-  <package id="structuremap" version="2.6.3" />
+    <package id="Bottles" version="1.0.0.425" targetFramework="net40" />
+    <package id="FubuCore" version="1.0.0.216" targetFramework="net40" />
+    <package id="FubuLocalization" version="0.9.5.113" targetFramework="net40" />
+    <package id="FubuMVC.Core" version="0.9.9.1323" targetFramework="net40" />
+    <package id="FubuMVC.Core.Assets" version="0.9.9.73" targetFramework="net40" />
+    <package id="FubuMVC.Core.UI" version="0.9.9.85" targetFramework="net40" />
+    <package id="FubuMVC.Core.View" version="0.9.9.76" targetFramework="net40" />
+    <package id="FubuMVC.Spark" version="0.9.9.76" targetFramework="net40" />
+    <package id="FubuMVC.StructureMap" version="0.9.9.1323" targetFramework="net40" />
+    <package id="HtmlTags" version="1.2.0.136" targetFramework="net40" />
 </packages>
