First stab at the clientside model.

--- a/src/FubuMVC.Validation/validation.script.config
+++ b/src/FubuMVC.Validation/validation.script.config
@@ -2,8 +2,6 @@ jquery is lib/jquery-1.7.min.js
 
 ordered set core is 
 jquery
-lib/amplify.core.min.js
-lib/json2.js
 lib/underscore-min.js
 lib/jquery.form.js
 lib/jquery.continuations.js
@@ -11,3 +9,7 @@ lib/jquery.continuations.forms.js
 lib/sinon-1.2.0.js
 
 fubuvalidation.js requires core
+fubuvalidation.client.rules.js requires jquery, fubuvalidation.js
+fubuvalidation.client.js requires jquery, fubuvalidation.js, fubuvalidation.client.rules.js
+
+specs/fubuvalidation.client.rules.spec.js requires fubuvalidation.client.js
