Adds the remaining basic rules and sources. Stubbed localization for now

--- a/src/FubuMVC.Validation/validation.script.config
+++ b/src/FubuMVC.Validation/validation.script.config
@@ -9,7 +9,8 @@ lib/jquery.continuations.forms.js
 lib/sinon-1.2.0.js
 
 fubuvalidation.js requires core
-fubuvalidation.client.rules.js requires jquery, fubuvalidation.js
+fubuvalidation.localization.js requires jquery, fubuvalidation.js
+fubuvalidation.client.rules.js requires jquery, fubuvalidation.js, fubuvalidation.localization.js
 fubuvalidation.client.js requires jquery, fubuvalidation.js, fubuvalidation.client.rules.js
 
 specs/fubuvalidation.client.rules.spec.js requires fubuvalidation.client.js
