Notification to continuation renders the stringtokens

--- a/src/FubuMVC.Validation/validation.script.config
+++ b/src/FubuMVC.Validation/validation.script.config
@@ -13,4 +13,5 @@ fubuvalidation.localization.js requires jquery, fubuvalidation.js
 fubuvalidation.client.rules.js requires jquery, fubuvalidation.js, fubuvalidation.localization.js
 fubuvalidation.client.js requires jquery, fubuvalidation.js, fubuvalidation.client.rules.js
 
+specs/fubuvalidation.client.spec.js requires fubuvalidation.js
 specs/fubuvalidation.client.rules.spec.js requires fubuvalidation.client.js
