--- a/src/FubuMVC.Validation/validation.script.config
+++ b/src/FubuMVC.Validation/validation.script.config
@@ -8,10 +8,11 @@ lib/jquery.continuations.js
 lib/jquery.continuations.forms.js
 lib/sinon-1.2.0.js
 
-fubuvalidation.js requires core
-fubuvalidation.localization.js requires jquery, fubuvalidation.js
-fubuvalidation.client.rules.js requires jquery, fubuvalidation.js, fubuvalidation.localization.js
-fubuvalidation.client.js requires jquery, fubuvalidation.js, fubuvalidation.client.rules.js
 
-specs/fubuvalidation.client.spec.js requires fubuvalidation.js
-specs/fubuvalidation.client.rules.spec.js requires fubuvalidation.client.js
+fubuvalidation.localization.js requires jquery
+fubuvalidation.rules.js requires fubuvalidation.localization.js
+fubuvalidation.core.js requires fubuvalidation.rules.js
+fubuvalidation.ui.js requires lib/jquery.continuations.js, lib/jquery.continuations.forms.js
+
+specs/fubuvalidation.core.spec.js requires fubuvalidation.ui.js
+specs/fubuvalidation.rules.spec.js requires fubuvalidation.core.js
