--- a/src/FubuMVC.Validation/validation.script.config
+++ b/src/FubuMVC.Validation/validation.script.config
@@ -13,6 +13,7 @@ fubuvalidation.localization.js requires jquery
 fubuvalidation.rules.js requires fubuvalidation.localization.js
 fubuvalidation.core.js requires fubuvalidation.rules.js
 fubuvalidation.ui.js requires lib/jquery.continuations.js, lib/jquery.continuations.forms.js
+fubuvalidation.plugin.js requires fubuvalidation.ui.js, fubuvalidation.core.js
 
 specs/fubuvalidation.core.spec.js requires fubuvalidation.ui.js
 specs/fubuvalidation.rules.spec.js requires fubuvalidation.core.js
